syntax = "proto3";

option go_package = "api/pb/auth;auth";

package auth;

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Refresh(RefreshRequest) returns (LoginResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  uint64 id = 1;
  string username = 2;
  string token = 3; // access_token
  string refresh_token = 4; // refresh_token
}

message RefreshRequest {
  string refresh_token = 1;
}